# rc_cheng.xiaoxiao

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  Dockerfile  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_provider_code_unique.py
app/: __init__.py  config.py  db.py  errors.py  main.py  models.py  schemas.py  security.py
app/api/: admin.py  notifications.py
app/providers/: base.py  registry.py
app/providers/adapters/: __init__.py  ads.py  crm.py  inventory.py
app/services/: delivery.py  metrics.py  notifications.py
app/tasks/: __init__.py  broker.py  delivery.py
docs/: api.md  database.md  deployment.md  provider-onboarding.md  testing.md
docs/superpowers/plans/: 2026-05-19-api-notification-platform-implementation.md
docs/superpowers/specs/: 2026-05-19-api-notification-platform-design.md
scripts/: mock_vendor.py  run_worker.py  seed_providers.py
tests/: conftest.py  test_db.py  test_health.py  test_mock_vendor.py  test_models.py
tests/api/: test_admin.py  test_notifications.py
tests/integration/: test_delivery_flow.py
tests/providers/: test_adapters.py
tests/services/: test_delivery.py
tests/tasks/: test_queue_routing.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css
web/src/pages/: Dashboard.tsx  NotificationDetail.tsx  Notifications.tsx  Providers.tsx
